# 100yen-breakfast-bot

.github/workflows/: discord-bot.yml
discord-bot/: .env.sample  .gitignore  Cargo.toml
discord-bot/src/: lib.rs  main.rs
discord-bot/src/commands/: calendar.rs  mod.rs  role.rs
discord-bot/src/google/: auth.rs  event.rs  mod.rs
discord-bot/src/utils/: date.rs  format.rs  mod.rs
