[package]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenvy= "0.15.7"
yup-oauth2 = "^5.0"
google-calendar3 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
chrono = "^0.4"
jsonwebtoken = "^7"
reqwest = {version = "^0.10",features = ["json","blocking","rustls-tls"]}
