[package]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy= "0.15.7"
chrono = "^0.4"
chrono-tz = "^0.8"
jsonwebtoken = "^7"
reqwest = {version = "0.11",features = ["json","rustls-tls"]}
